# web-auto-tester

./: .gitignore  Dockerfile  app.py  generate_testing_frameworks_doc.py  pyproject.toml  render.yaml  requirements.txt  run_tests.py  setup.bat  setup.sh
.github/workflows/: deploy.yml
web_auto_tester/: __init__.py  __main__.py  analyzers.py  database.py  discovery.py  lite_runner.py  models.py  report.py  runner.py
