[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-auto-tester"
version = "1.0.0"
description = "Framework-agnostic automated testing for deployed web applications"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
web-auto-tester = "web_auto_tester.__main__:main"

[tool.setuptools.packages.find]
include = ["web_auto_tester*"]
